--- a/PouBDSMultiplayer/PouBDSMultiplayer/MainMenu.resx
+++ b/PouBDSMultiplayer/PouBDSMultiplayer/MainMenu.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="eastereggclickPou.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABAAAAAQACAYAAAB/HSuDAAAABGdBTUEAALGPC/xhBQAA/8dJREFUeF6U
         /WHW5DqOJYtWzn9Mr7u6b1eO6mbdt6ik8RhNkMfpH1ikCGBjA6Qoyt3ji//4//7Pf/zHkf+95X+p/X/+
