--- a/PouBDSMultiplayer/PouBDSMultiplayer/Informations.resx
+++ b/PouBDSMultiplayer/PouBDSMultiplayer/Informations.resx
@@ -1678,8 +1678,8 @@ consiga mais pontos que os seus adversários
 e seja o mais comilão de todos os tempos!
 
 
-Controles de movimento: [A &lt;- para esquerda]
-[D &lt;- para direita]
+Controles de movimento: A &lt;- para esquerda]
+D &lt;- para direita]
 
 Bom jogo!</value>
   </data>
